[gd_scene load_steps=10 format=2]

[ext_resource path="res://Generator.gd" type="Script" id=1]
[ext_resource path="res://image/bar.png" type="Texture" id=2]
[ext_resource path="res://FakeBall.tscn" type="PackedScene" id=3]
[ext_resource path="res://image/block.png.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 84, 88 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "power_off"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "power_on"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 4 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 65, 73 )

[node name="Generator" type="Area2D" groups=["generator"]]
collision_layer = 0
collision_mask = 64
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 52, 56 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.172549, 0.0862745, 0.0862745, 0.572549 )
position = Vector2( 52, 56 )
scale = Vector2( 2.625, 2.75 )
texture = ExtResource( 2 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 144.0
margin_top = -32.0
margin_right = 160.0
margin_bottom = 136.0
step = 0.1
value = 20.0
texture_progress = ExtResource( 2 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/power_off = SubResource( 4 )
anims/power_on = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 55, 63 )
shape = SubResource( 2 )

[node name="FakeBall" parent="." instance=ExtResource( 3 )]
position = Vector2( 52, 56 )

[connection signal="body_entered" from="." to="." method="_on_Generator_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Generator_body_exited"]
